# prefect-hello-world

./: .gitignore  LICENSE  README.md  prefect.yaml  pyproject.toml
src/prefect_hello_world/: hello_world.py
