[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prefect-hello-world"
dynamic = ["version"]
description = "Simple examples illustrating Prefect capabilities"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "Apache-2.0"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "deepdiff>=7.0.1",
    "flake8>=6.1.0",
    "loguru>=0.7.2",
    "pandas>=2.1.4",
    "polars-lts-cpu>=1.2.1",
    "prefect==3.2.10",
    "prometheus-client>=0.20.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.5.2",
    "PyJWT>=2.8.0",
    "pytest>=7.1.3",
    "requests==2.31.0",
    "requests_toolbelt>=1.0.0"
]

[tool.hatch.version]
path = "src/prefect_hello_world/__about__.py"

[tool.hatch.envs.default]
type= "virtual"
path = ".venv-default"
installer = "uv"

[tool.hatch.envs.hatch-test]
type= "virtual"
path = ".venv-hatch-test"
template = "default"
extra-dependencies = [
    "mypy>=1.0.0",
    "pre-commit~=4.0.0",
    "pytest-cov>=6.0.0",
    "requests-mock>=1.12.1",
    "testcontainers>=4.4.0"
]

[tool.hatch.envs.dev]
type= "virtual"
path = ".venv-dev"
template = "hatch-test"

[tool.ruff.lint]
extend-ignore= ["G004", "S311", "PLR2004", "TRY002", "EM101", "TRY003", "ARG001", "T201", "SLF001"]

[tool.coverage.run]
source_pkgs = ["prefect_hello_world", "tests"]
branch = true
parallel = true
omit = [
  "src/prefect_hello_world/__about__.py",
]

[tool.coverage.paths]
foobar = ["src/prefect_hello_world", "*/prefect-hello-world/src/prefect_hello_world"]
tests = ["tests", "*/prefect-hello-world/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
